--- a/public/custom.css
+++ b/public/custom.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Muli:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Open+Sans:ital,wght@0,600;0,700;0,800;1,600;1,700;1,800&family=Poppins:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500&family=Rubik:ital,wght@0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;531;600;700;800;900&display=swap');
+
+* {
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
+}
 
 /*
 
@@ -9,6 +16,144 @@ font-family: 'Poppins', sans-serif;
 font-family: 'Rubik', sans-serif;
 
 */
+
+.navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 15px 0px;
+}
+
+.logoText {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: #fff;
+    text-decoration: none;
+}
+.logoText:hover {
+    text-decoration: none;
+    color: #fff;
+}
+.logoText > span {
+    color: #da5454;
+}
+
+.menuUl {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+    display: flex;
+    margin-left: auto;
+}
+.menuUl > .menuLi {
+    padding: 0px 20px;
+}
+.menuUl > .menuLi > .menuA {
+    color: rgb(145, 145, 145);
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+}
+.menuUl > .menuLi.active > .menuA {
+    color: rgb(255, 255, 255);
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+}
+.info_company {
+    background-color: #0f0f0f;
+}
+
+.blogs {
+    padding: 40px 0px;
+    display: block;
+}
+
+.header_blogs > .title_blog {
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.blogs > .Blog_title > .blog_aciklama {
+    font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
+    font-size: 18px;
+    color: rgb(187, 187, 187);
+    border-bottom: 3px solid rgb(46, 46, 46);
+    overflow: hidden; 
+    white-space: nowrap; 
+    text-overflow: ellipsis; 
+    max-width: 80%;
+}
+.blogs > .Blog_title:hover .blog_aciklama {
+    border-bottom: 3px solid #fff;
+    cursor: pointer;
+    transition: .3s;
+}
+.blogs > .Blog_title {
+    display: flex;
+    margin-bottom: 10px;
+}
+.blogs > .Blog_title > .blog_date {
+    margin-left: auto;
+    font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
+    font-size: 16px;
+    margin-top: auto;
+    margin-bottom: auto;
+    color: #fff;
+}
+.info_wwm {
+    font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
+    font-size: 16px;
+    color: rgb(207, 207, 207);
+    width: 60%;
+}
+.list_of_work {
+    padding: 0px;
+    margin: 0px;
+    list-style-type: none;
+    display: inline-flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.low_li {
+    width: 50%;
+    color: rgb(172, 172, 172);
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.check_area {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background-color: #111;
+    text-align: center;
+    margin-right: 15px;
+}
+
+.title_blog_lates {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.header_blogs > .title_blog > b {
+    color: rgb(43, 170, 85);
+}
+.header_blogs > p {
+    color: rgb(134, 134, 134);
+    width: 50%;
+}
+
 .privacy {
     margin: 0 auto;
     width: 50%;
@@ -37,3 +182,24 @@ font-family: 'Rubik', sans-serif;
     margin-bottom: 0px!important;
     font-family: 'Muli', sans-serif;
 }
+
+body {
+    background-color: #000;
+}
+
+.header {
+    background-color: red;
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
