--- a/public/custom.css
+++ b/public/custom.css
@@ -1,9 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Muli:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600&family=Open+Sans:ital,wght@0,600;0,700;0,800;1,600;1,700;1,800&family=Poppins:ital,wght@0,400;0,500;0,600;1,300;1,400;1,500&family=Rubik:ital,wght@0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;531;600;700;800;900&display=swap');
 
-* {
-    padding: 0px;
-    margin: 0px;
+body {
     font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
 }
 
@@ -34,7 +32,7 @@ font-family: 'Rubik', sans-serif;
     font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
     font-weight: bold;
     font-size: 24px;
-    color: #2baa55;
+    color: #fff;
     text-decoration: none;
 }
 .logoText:hover {
@@ -74,16 +72,27 @@ font-family: 'Rubik', sans-serif;
     display: block;
 }
 
-.blog-design > header {
+.blog-design > a {
     color: #fff;
     font-weight: bold;
     font-size: 25px;
     margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+   -webkit-line-clamp: 1; /* number of lines to show */
+   -webkit-box-orient: vertical;
 }
 .blog-design > p {
     color: rgb(196, 196, 196);
     font-size: 15px;
     line-height: 20px;
+    margin-bottom: 0px!important;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
 }
 .blog-design {
     padding: 20px;
@@ -108,6 +117,52 @@ font-family: 'Rubik', sans-serif;
     font-size: 30px;
     font-weight: bold;
     color: #fff;
+}
+
+.article_main {
+    margin: 0 auto;
+    font-family: 'Inter',-apple-system,BlinkMacSystemFont,Helvetica Neue,Segoe UI,Helvetica,Roboto,Arial,sans-serif;
+    color: #fff;
+}
+
+.goBack {
+    padding: 10px 0px;
+}
+.geriDon {
+    color: #34c470;
+    font-size: 16px;
+}
+.article_main > header {
+    font-weight: bolder;
+    font-size: 40px;
+    text-align: center;
+    padding: 60px 0px;
+}
+.article_main > .content {
+    width: 70%;
+    margin: 0 auto;
+}
+.article_main > .content > h1, h2 {
+    font-weight: bolder;
+    font-size: 25px;
+}
+.article_main > .content > h3, h4 {
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+.article_main > .content > h5, h6 {
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.article_main > .content > p {
+    font-size: 16px;
+    color: rgb(192, 192, 192);
+    margin-bottom: 40px;
+}
+.article_main > .content > p > strong {
+    color: rgb(101, 212, 101);
 }
 
 .blogs > .Blog_title > .blog_aciklama {
