--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,10 @@ body {
     display: flex;
 }
 
+.privacy .content {
+    width: var(--width);
+    margin: 0 auto;
+}
 .logoText {
     font-family: 'Poppins', sans-serif;
     font-weight: 800;
@@ -115,16 +119,28 @@ body {
     border-radius: 5px;
     color: #111;
     margin-bottom: 10px;
+    text-decoration: none;
 }
+.header_blogs p {
+    margin-top: 0px;
+    width: 50%;
+    font-family: var(--inter);
+}
+.category_items:hover {
+    border-color: tomato;
+    color: tomato;
+}
+
 
 .blogs_all {
     width: var(--contentWidth);
     margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .blog-design {
-    width: calc(50% - 30px);
+    width: calc(50% - 74px);
     margin-right: 30px;
     padding: 20px;
     border-radius: 5px;
@@ -132,10 +148,11 @@ body {
     border-right: 3px solid #111;
     border-bottom: 3px solid #111;
     border-top: 1px solid #111;
+    margin-bottom: 30px;
 }
 .blog-design:nth-child(2n+2) {
     margin-left: 30px;
-    width: calc(50% - 30px);
+    width: calc(50% - 74px);
     margin-right: 0px;
 }
 
@@ -299,4 +316,10 @@ body {
 
 .menu_link:hover {
     text-decoration: underline;
+}
+
+
+.infor {
+    font-weight: bold;
+    margin-bottom: 5px!important;
 }
