--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,9 +23,12 @@ body {
     padding: 0;
 }
 
+.layout {
+    width: var(--width);
+    margin: 0 auto;
+}
 
 .header {
-    width: var(--width);
     margin: 0 auto;
     padding: 20px 0px;
     display: flex;
@@ -35,6 +38,8 @@ body {
     width: var(--width);
     margin: 0 auto;
 }
+
+
 .logoText {
     font-family: 'Poppins', sans-serif;
     font-weight: 800;
@@ -74,12 +79,8 @@ body {
 }
 
 .info_company {
-    padding: 50px 0px;
-}
-
-.header_blogs {
-    width: var(--width);
-    margin: 0 auto;
+    padding: 25px 0px;
+    padding-bottom: 55px;
 }
 
 .header_blogs .title_blog {
@@ -133,15 +134,14 @@ body {
 
 
 .blogs_all {
-    width: var(--contentWidth);
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
 
 .blog-design {
-    width: calc(50% - 74px);
-    margin-right: 30px;
+    width: calc(50% - 59px);
+    margin-right: 15px;
     padding: 20px;
     border-radius: 5px;
     border-left: 1px solid #111;
@@ -150,9 +150,10 @@ body {
     border-top: 1px solid #111;
     margin-bottom: 30px;
 }
+
 .blog-design:nth-child(2n+2) {
-    margin-left: 30px;
-    width: calc(50% - 74px);
+    margin-left: 15px;
+    width: calc(50% - 59px);
     margin-right: 0px;
 }
 
@@ -226,10 +227,6 @@ body {
     text-align: center;
     font-weight: 500;
 }
-.article_main .content {
-    margin: 0 auto;
-    width: var(--width);
-}
 .content {
     font-family: var(--opensans);
     font-weight: 500;
@@ -270,7 +267,6 @@ body {
 }
 
 .footer {
-    width: var(--width);
     margin: 0 auto;
     margin-top: 60px;
     font-family: var(--inter);
@@ -347,6 +343,7 @@ body {
     background-color: #ddd;
     margin-bottom: 10px;
 }
+
 
 .sheader {
     padding: 45px 0px;
