--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -74,6 +74,14 @@
         margin-right: 0px;
         margin-bottom: 20px;
     }
+    .what_you_want p {
+        width: 100%!important;
+    }
+    .my_apps {
+        width: 100%!important;
+        margin-right: 0px!important;
+        margin-left: 0px!important;
+    }
     .blogs_all .blog-design:nth-child(2n+2) {
         width: calc(100% - 40px)!important;
         margin-right: 0px;
