--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,12 +26,109 @@ body {
     padding: 20px 0px;
     display: flex;
 }
+.Javascript {
+    display: flex;
+    font-size: 14px;
+}
+.Javascript::before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    background-color: #f1e05a;
+    display: flex;
+    border-radius: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 10px;
+}
 
+.apps_me {
+    display: flex;
+    flex-wrap: wrap;
+}
+.my_apps {
+    width: calc(50% - 17px);
+    margin-right: 15px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 3px;
+    margin-bottom: 30px;
+}
+.type_lang {
+    background-color: #d0d7f72d;
+    padding: 5px 10px;
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.j_script {
+    border: 1px solid #5167c954;
+}
+.my_apps p {
+    padding: 0px 10px;
+    margin: 0px;
+    font-size: 14px;
+    width: 70%;
+    padding-bottom: 10px;
+}
+.what_you_want {
+    padding: 25px 0px;
+    padding-bottom: 55px;
+}
+.what_you_want p {
+    width: 70%;
+    font-size: 14px;
+}
+.what_you_want h3{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.apps_info {
+    display: flex;
+    padding: 3px 10px;
+}
+.apps_info a {
+    font-size: 13px;
+    text-decoration: none;
+    color: black;
+    margin-top: 5px;
+}
+.my_apps h3 {
+    font-weight: bold;
+    font-size: 14px;
+    margin: 5px 0px;
+    margin-right: auto;
+}
+
+.my_apps:nth-child(2n+2) {
+    margin-left: 15px;
+    margin-right: 0px;
+}
+.open_source {
+    text-align: left;
+    font-size: 14px;
+}
+.app_info {
+    margin-bottom: 28PX;
+}
+.play_store {
+    padding: 5px 0px;
+    background-color: #000;
+    margin-top: 24px;
+    border: 0px;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+}
+.play_store:hover {
+    background-color: #222222;
+}
 .privacy .content {
     width: var(--width);
     margin: 0 auto;
 }
-
 
 .logoText {
     font-weight: 800;
