--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-/*
 
-font-family: 'Montserrat', sans-serif;
-font-family: 'Poppins', sans-serif;
-*/
+@font-face {
+    font-family: 'regular';
+    src: url('/fonts/Poppins-Regular.ttf')  format('truetype')
+}
 
+@font-face {
+    font-family: 'semi-bold';
+    src: url('/fonts/Poppins-SemiBold.ttf')  format('truetype') /* Safari, Android, iOS */
+}
+
+@font-face {
+    font-family: 'bold';
+    src: url('/fonts/Poppins-Bold.ttf')  format('truetype')
+}
+
+
+@font-face {
+    font-family: 'black';
+    src: url('/fonts/Poppins-Black.ttf')  format('truetype') 
+}
 
 :root {
-    --poppins: 'Poppins', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --poppins: 'regular', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --poppins-semi-bold: 'semi-bold', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --poppins-bold: 'bold', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --poppins-black: 'Poppins-Black', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
 body {
@@ -253,6 +270,7 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
+    font-family: var(--poppins-black);
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     text-decoration: none;
@@ -281,6 +299,7 @@ body {
     -webkit-box-orient: vertical;
     font-weight: bold;
     margin-top: 5px;
+    font-family: var(--poppins-semi-bold);
 }
 .blog-design .kate {
     font-size: 14px;
@@ -298,13 +317,13 @@ body {
     text-align: center;
     font-weight: bold;
     margin-bottom: 10px;
-    
+    font-family: var(--poppins-black);
     line-height: 46px;
     letter-spacing: -0.015em;
 }
 .article_main header time {
     color: rgb(105, 105, 105);
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     font-weight: 500;
 }
@@ -312,6 +331,7 @@ body {
     font-weight: 700;
     font-size: 22px;
     margin-bottom: 10px;
+    font-family: var(--poppins-bold);
 }
 
 .content p {
