--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,30 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-@font-face {
-    font-family: 'regular';
-    src: url('/fonts/Poppins-Regular.ttf')  format('truetype')
-}
-
-@font-face {
-    font-family: 'semi-bold';
-    src: url('/fonts/Poppins-SemiBold.ttf')  format('truetype') /* Safari, Android, iOS */
-}
-
-@font-face {
-    font-family: 'bold';
-    src: url('/fonts/Poppins-Bold.ttf')  format('truetype')
-}
-
-
-@font-face {
-    font-family: 'black';
-    src: url('/fonts/Poppins-Black.ttf')  format('truetype') 
-}
 
 :root {
-    --poppins: 'regular', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    --poppins-semi-bold: 'semi-bold', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    --poppins-bold: 'bold', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    --poppins-black: 'Poppins-Black', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --poppins: 'Poppins', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
 
 body {
@@ -270,7 +248,6 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    font-family: var(--poppins-black);
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     text-decoration: none;
@@ -299,7 +276,6 @@ body {
     -webkit-box-orient: vertical;
     font-weight: bold;
     margin-top: 5px;
-    font-family: var(--poppins-semi-bold);
 }
 .blog-design .kate {
     font-size: 14px;
@@ -317,13 +293,13 @@ body {
     text-align: center;
     font-weight: bold;
     margin-bottom: 10px;
-    font-family: var(--poppins-black);
+    
     line-height: 46px;
     letter-spacing: -0.015em;
 }
 .article_main header time {
     color: rgb(105, 105, 105);
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     font-weight: 500;
 }
@@ -331,7 +307,6 @@ body {
     font-weight: 700;
     font-size: 22px;
     margin-bottom: 10px;
-    font-family: var(--poppins-bold);
 }
 
 .content p {
