--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
-
 :root {
     --poppins: 'Inter', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    --width: 48%;
 }
 
 body {
@@ -77,6 +76,7 @@ body {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
+    margin-top: 0px;
 }
 
 .apps_info {
@@ -164,9 +164,22 @@ body {
 
 .info_company {
     padding: 25px 0px;
-    padding-bottom: 55px;
+    padding-bottom: 35px;
 }
 
+.pagination .page_list {
+    font-size: 34px;
+    font-weight: 900;
+    text-decoration: none;
+    color: rgb(97, 97, 97);
+    margin-right: 30px;
+}
+.pagination .page_list.active {
+    color: black;
+}
+.pagination .page_list:hover {
+    text-decoration: underline;
+}
 .header_blogs .title_blog {
     font-size: 16px;
     font-weight: bold;
