--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 :root {
     --poppins: 'Inter', -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-    --width: 48%;
 }
 
 body {
@@ -164,15 +163,17 @@ body {
 
 .info_company {
     padding: 25px 0px;
-    padding-bottom: 35px;
 }
-
+.pagination {
+    flex-wrap: wrap;
+    display: flex;
+}
 .pagination .page_list {
     font-size: 34px;
     font-weight: 900;
     text-decoration: none;
     color: rgb(97, 97, 97);
-    margin-right: 30px;
+    margin-right: 30px
 }
 .pagination .page_list.active {
     color: black;
