--- a/styles/styles.css
+++ b/styles/styles.css
@@ -316,7 +316,7 @@ body {
     color: #000;
     font-size: 36px;
     text-align: center;
-    font-weight: bold;
+    font-weight: 900;
     margin-bottom: 10px;
     
     line-height: 46px;
@@ -329,9 +329,18 @@ body {
     font-weight: 500;
 }
 .content h1, h2, h3, h4, h5, h6 {
-    font-weight: 700;
-    font-size: 22px;
+    font-weight: bold;
+    font-size: 26px;
     margin-bottom: 10px;
+}
+
+.github_w_login {
+    width: 300px;
+    margin: 0 auto;
+    border: 2px solid #111;
+    color: black;
+    background-color: #fff;
+    padding: 10px 0px;
 }
 
 .content p {
