--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,7 @@ a {
 }
 .light_theme {
   background-color: #fff;
+  padding: 70px 0px;
 }
 .dark_theme {
   min-height: 100vh;
@@ -69,17 +70,36 @@ a {
 .menu_link {
   font-weight: 600;
   font-size: 15px;
-  margin: 0px 25px;
+  padding: 8px 20px;
+  margin-left: 10px;
 }
 .light_theme .menu_link.active {
   color: #000;
   font-weight: 700;
+  background-color: rgb(237, 238, 240);
+  border-radius: 4px;
 }
 .menu_link:hover {
-  opacity: 0.8;
+  background-color: rgb(237, 238, 240);
+  border-radius: 4px;
+  transition: all 250ms ease 0s;
+  color: #2e2e2e !important;
 }
+
+.list_item {
+  padding: 10px;
+}
+.list_item:hover {
+  background-color: #ececec;
+  border-radius: 4px;
+  transition: all 250ms ease 0s;
+}
+.social_list {
+  margin-left: -10px;
+}
+
 .light_theme .menu_link {
-  color: #3f3f3f;
+  color: #7a7a7a;
 }
 .menu_link:last-child {
   margin-right: 0px;
@@ -109,6 +129,7 @@ a {
 }
 .blog > .header_link {
   font-weight: 600;
+  font-size: 16px;
 }
 time {
   font-size: 13px;
@@ -248,26 +269,40 @@ time {
 }
 .movie_list_pro {
   align-items: unset !important;
-  padding: 20px;
   border-radius: 5px;
   margin-bottom: 28px;
 }
 .movie_content > div > .link_movie {
   font-weight: 700;
   font-size: 24px;
+  margin-bottom: 6px;
 }
 .content {
   padding: 30px 0px;
 }
-.content time {
-  margin: 0 auto;
+.min_read {
+  margin-left: 10px;
+  font-size: 13px;
+  color: #555555;
+}
+.min_read::before {
+  content: " • ";
+  margin-right: 5px;
+  font-weight: bold;
+}
+.customHeader {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  backdrop-filter: saturate(180%);
 }
 .content > header {
-  font-size: 3em;
-  font-weight: 900;
+  font-size: 2em;
+  font-weight: 700;
   line-height: 1.25;
   margin-bottom: 8px;
-  text-align: center;
 }
 .dark_theme .content > p,
 .dark_theme .content > ul li,
@@ -295,6 +330,7 @@ h5,
 h6 {
   font-weight: 700 !important;
   font-size: 25px;
+  margin-top: 48px !important;
 }
 .mb48 {
   margin-bottom: 48px;
@@ -307,6 +343,7 @@ h6 {
 .movie_content > div > p {
   width: 70%;
   line-height: 22px;
+  margin-top: 10px;
 }
 .movie_list_pro > img {
   width: 120px;
@@ -435,11 +472,18 @@ h6 {
   color: #fff;
 }
 .light_theme .list_i > .i {
-  color: #111;
+  color: #11111188;
+  border: 1px solid #1111112c;
+  border-radius: 3px;
+}
+.light_theme .list_i > .i:hover {
+  color: #11111196;
+  border: 1px solid #11111148;
+  border-radius: 3px;
 }
 .list_i > .i.active {
-  border: 1px solid #454ed4;
-  color: #454ed4;
+  color: #111111ef;
+  border: 1px solid #1111118a;
   border-radius: 3px;
 }
 .left_go {
@@ -452,4 +496,35 @@ h6 {
 .not_found {
   text-align: center;
   margin-top: 45px;
+}
+.content > p code {
+  font-size: 0.875rem;
+  padding: 3px 6px;
+  font-weight: 500;
+  background-color: #55c58477;
+  color: rgb(29, 19, 9);
+  border-radius: 5px;
+}
+
+.content a {
+  color: #272727 !important;
+  border-bottom: 1px dashed #000;
+  font-weight: 500;
+}
+.source_code {
+  margin-left: auto;
+}
+.source_code > a {
+  margin-left: auto;
+  color: #646464 !important;
+  border: 1px dashed #b3b3b3;
+  font-weight: 500;
+  padding: 8px 40px;
+  border-radius: 3px;
+  transition: all 250ms ease 0s;
+  font-weight: 600;
+  font-size: 14px;
+}
+.source_code > a:hover {
+  border: 1px dashed #000000;
 }
