--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,8 +5,25 @@
 @media only screen and (max-width: 1000px) {
   .menu_list {
     padding: 10px 0px;
+    padding-bottom: 0px;
   }
   .menu_list > .menu_link:first-child {
+    margin-left: 0px;
+  }
+  .customHeader {
+    padding-bottom: 0px !important;
+    padding-top: 10px !important;
+  }
+  .movie_list {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .list_of_tag {
+    width: unset;
+    padding: 8px 20px;
+    margin-right: 15px;
+    margin-bottom: 10px;
     margin-left: 0px;
   }
 }
@@ -16,6 +33,20 @@
   }
   .container {
     width: 100%;
+  }
+  .movie_content > div > p {
+    width: 100%;
+    line-height: 17px;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+  .movie_list_pro {
+    max-height: 180px;
+    overflow: hidden;
+  }
+  .lh-20 {
+    line-height: 20px;
   }
 }
 
@@ -40,5 +71,8 @@
   }
   .footer {
     padding-bottom: 10px;
+  }
+  .light_theme {
+    padding-top: 60px;
   }
 }
