--- a/styles/bootstrap.css
+++ b/styles/bootstrap.css
@@ -580,7 +580,7 @@ samp {
 pre {
   display: block;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem !important;
   overflow: auto;
   font-size: 0.875em;
   -ms-overflow-style: scrollbar;
